[project]
name = "cytnx-doc"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kai", email = "kaihsinwu@gmail.com" }
]
dependencies = [
    "breathe>=4.35.0",
    "sphinx>=8.0.2",
    "sphinxcontrib-bibtex>=2.6.2",
    "sphinxcontrib-jquery>=4.1",
    "sphinxbootstrap4theme>=0.6.0",
    "setuptools>=72.1.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cytnx_doc"]

[tool.rye.scripts]
make_doc = { cmd = "make html" }
